remove scrollbar, fixed user menu UI issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 0px;
 }
 ::-webkit-scrollbar-track {
   background: slategray;
